# goxvi

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
core/: CMakeLists.txt
core/include/goxvi/: config-json-serializer.h  engine-types.h  shortcut-expander.h  telex-engine.h  typo-autocorrect.h
core/src/: config-json-serializer.cpp  english-blocklist.generated.inc  shortcut-expander.cpp  telex-engine.cpp  telex-transform-rules.cpp  telex-transform-rules.h  tone-placement-rules.cpp  tone-placement-rules.h  typo-autocorrect-internal.h  typo-autocorrect-misplaced-modifier.cpp  typo-autocorrect-transposed-coda.cpp  typo-autocorrect.cpp  utf8-utf16-conversion.cpp  utf8-utf16-conversion.h  vietnamese-syllable-parser.cpp  vietnamese-syllable-parser.h  vni-transform-rules.cpp  vni-transform-rules.h
docs/: code-standards.md  codebase-summary.md  development-roadmap.md  project-changelog.md  system-architecture.md
installer/: Vietnamese.isl  goxvi.iss
scripts/: build-installer.ps1  build.ps1  register-tip.ps1  test-cuas-edit-harness.ps1  test-explorer-rename-e2e.ps1  unregister-tip.ps1
settings/: CMakeLists.txt  goxvi-settings.manifest  goxvi-settings.rc  settings-version.h.in
settings/src/: about-tab.cpp  activate-tip-log.cpp  activate-tip-log.h  activate-tip.cpp  activate-tip.h  app-container-acl.cpp  app-container-acl.h  config-store.cpp  config-store.h  default-input-override.cpp  default-input-override.h  language-switch-hotkey.cpp  language-switch-hotkey.h  main.cpp  overview-tab.cpp  run-hidden-powershell.cpp  run-hidden-powershell.h  settings-window.cpp  settings-window.h  shortcuts-tab.cpp  tabs.h  ui-common.h
tests/: CMakeLists.txt  acronym-no-restore-tests.cpp  config-serializer-tests.cpp  foreign-word-tests.cpp  shortcut-expander-tests.cpp  syllable-parser-tests.cpp  telex-engine-tests.cpp  test-helpers.h  test-typo-autocorrect.cpp  tone-placement-tests.cpp  utf8-utf16-conversion-tests.cpp  vni-engine-tests.cpp
tsf/: CMakeLists.txt  goxvi-tsf.def
tsf/src/: class-factory.cpp  class-factory.h  composition-manager.cpp  composition-manager.h  config-file-watcher.cpp  config-file-watcher.h  debug-logging.h  direct-text-injector.cpp  direct-text-injector.h  display-attribute-provider.cpp  display-attribute-provider.h  dll-exports.cpp  dll-main.cpp  dll-module.h  edit-session-callbacks.cpp  edit-session-callbacks.h  goxvi-guids.cpp  goxvi-guids.h  goxvi-text-service.cpp  goxvi-text-service.h  key-event-handler.cpp  key-event-handler.h  key-event-sink.cpp  mouse-click-commit-hook.cpp  mouse-click-commit-hook.h  tip-registration.cpp  tip-registration.h
